Procfile and deploy to heroku

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "seed": "node seeder.js"
+    "postinstall": "node seeder.js"
   },
   "keywords": [],
   "author": "Jaison Klemer",
