--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "passport-local": "^1.0.0",
     "uniqid": "^5.3.0"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {
     "dotenv": "^10.0.0"
   }
